# certify-core/src/main/java/io/mosip/certify/core/dto/VCApiIssueResponse.java
@@ -1,21 +1,0 @@
-/*
- * This Source Code Form is subject to the terms of the Mozilla Public
- * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at https://mozilla.org/MPL/2.0/.
- */
-package io.mosip.certify.core.dto;
-
-import com.fasterxml.jackson.annotation.JsonInclude;
-import lombok.Data;
-
-import java.util.Map;
-
-@Data
-@JsonInclude(JsonInclude.Include.NON_NULL)
-public class VCApiIssueResponse {
-
-    /**
-     * Signed LDP verifiable credential including proof.
-     */
-    private Map<String, Object> verifiableCredential;
-}
