# certify-service/src/main/java/io/mosip/certify/controller/VCApiController.java
@@ -1,13 +1,7 @@
-/*
- * This Source Code Form is subject to the terms of the Mozilla Public
- * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at https://mozilla.org/MPL/2.0/.
- */
 package io.mosip.certify.controller;
 
 import io.mosip.certify.core.constants.ErrorConstants;
 import io.mosip.certify.core.dto.VCApiIssueRequest;
-import io.mosip.certify.core.dto.VCApiIssueResponse;
 import io.mosip.certify.core.exception.InvalidRequestException;
 import io.mosip.certify.services.VCApiIssuanceService;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -25,6 +19,8 @@ import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Map;
+
 @Slf4j
 @RestController
 @RequestMapping("/vc-api")
@@ -38,7 +34,7 @@ public class VCApiController {
     private VCApiIssuanceService vcApiIssuanceService;
 
     @PostMapping(value = "/credentials/issue", produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<VCApiIssueResponse> issueCredential(
+    public ResponseEntity<Map<String, Object>> issueCredential(
             @RequestHeader(value = CREDENTIAL_CONFIGURATION_ID_HEADER) String credentialConfigurationId,
             @Valid @RequestBody VCApiIssueRequest request) {
         if (StringUtils.isBlank(credentialConfigurationId)) {
